--- a/Acme/index.html
+++ b/Acme/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="responsivo.css">
     <script src="index.js"></script>
     <title>Acme - Bem vindo </title>
 </head>
@@ -69,7 +70,7 @@
 
 </header>
 
-<section>
+<section id="home">
 
     <!--Produtos Femininos-->
     <div class="container">
