--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -111,7 +111,7 @@
 
         <div class="footer-text col-md-4">
             <i class="fa-solid fa-terminal"></i>
-            <p>© 2022 Termex, Inc</p>
+            <p>© 2022 <span><i class="fa-solid fa-terminal"></i></span> Termex, Inc</p>
         </div>
 
             <div class="footer-icons col-md-4 d-flex justify-content-end">
